--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@ button {
 button:hover {
   border-color: #646cff;
 }
+.selected {
+  border-color: #646cff;
+}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
